--- a/client/src/components/UI/Form/formCard.module.scss
+++ b/client/src/components/UI/Form/formCard.module.scss
@@ -1,20 +1,4 @@
-.card {
-  padding: 20px 0;
 
-  max-width: 850px;
-  margin: 0 auto;
-
-  background: #222222;
-  border: 1px solid #292929;
-  border-radius: 10px;
-
-  &__title {
-    text-align: center;
-    color: white;
-    font-size: 28px;
-    font-weight: 600;
-  }
-}
 
 .form {
   padding-top: 10px;
@@ -24,33 +8,33 @@
   align-items: center;
 
   &__label {
-    width: 35%;
-
-    &Title {
-      padding-top: 10px;
-      padding-left: 7px;
-
-      font-size: 20px;
-      color: rgba(white, 0.8);
-    }
+   width: 30%;
   }
 
+  input::placeholder{
+    font-size: 16px;
+    font-weight: 400;
+    opacity: 0.6;
+    color: #c5c5c5;
+  }
   &__input {
+
     margin-top: 10px;
 
     width: 100%;
-
-    padding: 7px;
+    padding: 8px;
     border-radius: 10px;
     border: 1px solid #292929;
+    background-color: #303030;
 
-    font-size: 20px;
+    font-size: 18px;
+    color: #c5c5c5;
   }
 
   &__error {
     padding-top: 10px;
 
-    color: rgba(#0077ff, 0.8);
+    color: #c5c5c5;
     font-size: 16px;
     text-align: center;
   }
