--- a/client/src/components/UI/Button/Button.module.scss
+++ b/client/src/components/UI/Button/Button.module.scss
@@ -9,73 +9,18 @@
   transition-duration: 0.2s;
 }
 
-.commonBtn {
+.authBtn {
   color: white;
 
-  &__small {
-    padding: 5px;
-    font-size: 12px;
-    border-radius: 5px;
-  }
+  width: 100%;
+  padding: 12px 0;
+  font-size: 16px;
+  border-radius: 10px;
 
-  &__medium {
-    width: 100%;
-    padding: 10px 20px;
-    font-size: 16px;
-    border-radius: 10px;
-  }
-
-  &__large {
-    padding: 15px 30px;
-    font-size: 18px;
-    border-radius: 15px;
-  }
-
-  &__stretched {
-    width: 100%;
-  }
-
-  &__textPositionLeft {
-    text-align: left;
-    padding-left: 7px;
-  }
-
-  &__row {
-    display: flex;
-    align-items: center;
-
-    gap: 0 5px;
-  }
-
-  &__img {
-    position: relative;
-
-    img {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-      object-fit: cover;
-    }
-  }
-
-  &__small &__img {
-    width: 12px;
-    height: 12px;
-  }
-
-  &__medium &__img {
-    width: 16px;
-    height: 16px;
-  }
-
-  &__large &__img {
-    width: 18px;
-    height: 18px;
-  }
+  background: linear-gradient(210deg, rgba(239, 115, 110, 0.7) 0%, rgba(157, 72, 232, 0.7) 50%, rgba(73, 144, 248, 0.7) 100%);
 
   &:hover {
-    background: #3b3b3bff;
+
+    background: linear-gradient(210deg, #ef736e 0%, #9d48e8 50%, #4990f8 100%);
   }
 }
