--- a/client/src/components/ChatLayout/ChatLayout.module.css
+++ b/client/src/components/ChatLayout/ChatLayout.module.css
@@ -1,10 +1,17 @@
-.profileLayout {
-  display: flex;
+.chatLayout {
+  display: block;
+  padding: 10px 0;
   gap: 0 10px;
+  color: white;
+  height: 100vh;
 }
 
 .content {
   flex: 1;
+  height: 100%;
+  margin: 0 auto;
+  max-width: 1500px;
+  display: flex;
 }
 
 /*# sourceMappingURL=ChatLayout.module.css.map */
