andrey: фикс роута для страницы без чата

--- a/client/src/components/ChatLayout/ChatLayout.module.css
+++ b/client/src/components/ChatLayout/ChatLayout.module.css
@@ -1,6 +1,6 @@
-.chatLayout {
+.wrapper {
   display: block;
-  padding: 10px 0;
+  padding: 20px 0;
   gap: 0 10px;
   color: white;
   height: 100vh;
