--- a/client/src/styles/styles.module.scss
+++ b/client/src/styles/styles.module.scss
@@ -1,9 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@400;500;600;700&display=swap');
 @import 'nullstyle';
 
-body, #root, html {
+body {
   font-family: 'Exo 2', sans-serif;
   background: #141414 no-repeat fixed;
-  height: 100%;
 }
 
