--- a/client/src/styles/styles.module.css
+++ b/client/src/styles/styles.module.css
@@ -73,10 +73,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*--------------------*/
-body, #root, html {
+body {
   font-family: "Exo 2", sans-serif;
   background: #141414 no-repeat fixed;
-  height: 100%;
 }
 
 /*# sourceMappingURL=styles.module.css.map */
