--- a/client/src/components/Layout/Layout.module.css
+++ b/client/src/components/Layout/Layout.module.css
@@ -1,20 +1,17 @@
 .wrapper {
-  width: calc(100vw - 350px);
-  height: calc(100vh - 60px);
-  max-width: 1400px;
-  background: rgba(0, 0, 0, 0.6);
-  margin: 0 auto;
-  border-radius: 10px;
+  display: block;
+  padding: 20px 0;
+  gap: 0 10px;
+  color: white;
+  height: 100vh;
 }
 
-.container {
-  padding: 20px 0;
-  width: 95%;
+.content {
+  flex: 1;
+  height: 100%;
   margin: 0 auto;
+  max-width: 1500px;
   display: flex;
-}
-.container__chatSidebar {
-  flex-basis: 30%;
 }
 
 /*# sourceMappingURL=Layout.module.css.map */
