andrey: Добавлена первоначальная врестка для Message, добавлен config с baseUrl

--- a/client/src/components/Chat/Field/Field.module.scss
+++ b/client/src/components/Chat/Field/Field.module.scss
@@ -5,9 +5,12 @@
 
   &__container {
     border-radius: 15px;
-    background-color: #453563;
+    background-color: #232323;
     height: 100%;
     font-size: 25px;
     overflow: auto;
+    padding: 5px;
+    display: flex;
+    flex-direction: column-reverse;
   }
 }
