--- a/client/src/components/Chat/Input/Input.module.scss
+++ b/client/src/components/Chat/Input/Input.module.scss
@@ -1,4 +1,16 @@
-.container {
-  height: 70px;
-  background-color: #2a2139;
+.input {
+  padding: 0 0 5px 5px;
+
+
+  &__container {
+    height: 70px;
+    background-color: #232323;
+    border-radius: 15px;
+
+  }
 }
+
+
+
+
+
