--- a/client/src/components/Layout/Layout.module.css
+++ b/client/src/components/Layout/Layout.module.css
@@ -3,13 +3,14 @@
   height: calc(100vh - 60px);
   max-width: 1400px;
   background: rgba(0, 0, 0, 0.6);
-  margin: 0 auto;
+  margin: 30px auto;
   border-radius: 10px;
 }
 
 .container {
   padding: 20px 0;
   width: 95%;
+  height: 100%;
   margin: 0 auto;
   display: flex;
 }
