--- a/client/src/components/Chat/Input/Input.module.scss
+++ b/client/src/components/Chat/Input/Input.module.scss
@@ -6,7 +6,27 @@
     height: 70px;
     background-color: #232323;
     border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 0 10px 0 15px;
 
+  }
+
+  &__clip {
+    position: relative;
+    width: 30px;
+    height: 30px;
+    margin-right: 15px;
+
+    img {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      object-fit: cover;
+    }
   }
 }
 
