--- a/client/src/components/UI/Input/Input.module.scss
+++ b/client/src/components/UI/Input/Input.module.scss
@@ -32,3 +32,19 @@
     color: #c5c5c5;
   }
 }
+
+.chatInput {
+  width: 100%;
+  padding: 15px 0 15px 15px;
+
+
+  font-size: 16px;
+  color: #c5c5c5;
+
+  &::placeholder {
+    font-size: 16px;
+    font-weight: 400;
+    opacity: 0.6;
+    color: #c5c5c5;
+  }
+}
