--- a/client/src/components/Chat/Field/Field.module.css
+++ b/client/src/components/Chat/Field/Field.module.css
@@ -4,10 +4,13 @@
 }
 .field__container {
   border-radius: 15px;
-  background-color: #453563;
+  background-color: #232323;
   height: 100%;
   font-size: 25px;
   overflow: auto;
+  padding: 5px;
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 /*# sourceMappingURL=Field.module.css.map */
